impressum first step

--- a/impressum.html
+++ b/impressum.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Impressum</title>
 </head>
 <body>
-    Impressum
+    <div class="wrapper">
+        <h2> Impressum</h2>
+        <h3>
+            Verantwortlich für den Inhalt:
+        </h3>
+        <div class="person-impressum">
+            <span>Inhaberin und Verantwortliche </span>
+            <span>Dr. Olga Egorova</span>
+            <span>Gleimstr. 63,</span>
+            <span> 13355 Berlin</span>
+            <span> Deutschland</span>
+            <span> olegorova@gmx.de</span>
+        </div>
+        <h3>
+            Verantwortlicher gemäß §10 Abs.3 MDStV:
+        </h3>
+        <div class="person-impressum">
+            <span>Dr. Olga Egorova</span>
+            <span>Gleimstr. 63,</span>
+            <span> 13355 Berlin</span>
+            <span> Deutschland</span>
+            <span> olegorova@gmx.de</span>
+        </div>
+    </div>
 </body>
 </html>
