--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     Russisch lernen
                 </div>
                 <div class="image city">
-                    <img src="./assets/img/kreml-01.jpg" alt="moskow" title="moskow">
+                    <img src="assets/source/kreml-01.jpg" alt="moskow" title="moskow">
                 </div>
                 <div class="title">
                     Russisch von einer erfahrenen Dozentin und
