--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="person">
                 <figure>
                     <img src="./assets/img/egorova.jpg" alt="Dr. Olga Egorova" title="Dr. Olga Egorova">
-                    <figcaption>Dr. Olga Egorova</figcaption>
+                    <figcaption class="figcaption">Dr. Olga Egorova</figcaption>
                 </figure>
             </div>
             <div class="content">
@@ -35,7 +35,7 @@
                 </h1>
                 
                 <p>
-                    In meinem Unterricht gehe ich immer auf die individuelle Interessen und Bedürfnisse der Lernenden
+                    In meinem Unterricht gehe ich immer auf die individuellen Interessen und Bedürfnisse der Lernenden
                     ein
                     und wende den kommunikativen Ansatz an. Unterrichtssprache kann Russisch und/oder Deutsch sein.
                 </p>
@@ -112,7 +112,7 @@
                     <img src="./assets/img/berlin-01.jpg" alt="berlin" title="berlin">
                 </div>
                 <div class="title">
-                    DaF/DaZ von einer erfahrenen Dozentin und promovierten Germanistin lernen!
+                    Deutsch von einer erfahrenen Dozentin und promovierten Germanistin lernen!
                 </div>
                 <div class="description">
                     <ul>
@@ -137,7 +137,7 @@
                             gezielte Prüfungsvorbereitung auf den „Deutsch-Test für Zuwanderer“ (DTZ)
                         </li>
                         <li>
-                            gezielte Vorbereitung den Test „Leben in Deutschland“
+                            gezielte Vorbereitung auf den Test „Leben in Deutschland“
                         </li>
                     </ul>
                 </div>
