--- a/impressum.html
+++ b/impressum.html
@@ -6,19 +6,22 @@
     <title>Impressum</title>
 </head>
 <body>
+    <header class="header__">
+    
+    </header>
     <div class="wrapper">
         <h2> Impressum</h2>
         <h3>
             Verantwortlich für den Inhalt:
         </h3>
-        <div class="person-impressum">
+        <section class="person-impressum">
             <span>Inhaberin und Verantwortliche </span>
             <span>Dr. Olga Egorova</span>
             <span>Gleimstr. 63,</span>
             <span> 13355 Berlin</span>
             <span> Deutschland</span>
             <span> olegorova@gmx.de</span>
-        </div>
+        </section>
         <h3>
             Verantwortlicher gemäß §10 Abs.3 MDStV:
         </h3>
