--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="section section-three two-language">
             <div class="russian language">
                 <div class="info">
-                    Russisch lernen
+                    <span>Russisch</span> lernen
                 </div>
                 <div class="image city">
                     <img src="assets/img/kreml-01.jpg" alt="moskow" title="moskow">
@@ -106,7 +106,7 @@
             </div>
             <div class="german language">
                 <div class="info">
-                    Deutsch lernen
+                    <span>Deutsch</span> lernen
                 </div>
                 <div class="image city">
                     <img src="./assets/img/berlin-01.jpg" alt="berlin" title="berlin">
